# rexplorer

./: .eslintrc.js  .gitignore  .prettierignore  .prettierrc.cjs  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: check-and-lint.yaml  test-build.yml
src/: App.vue  main.rs  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: HelloWorld.vue  RFileSize.vue  RFolderTableView.vue
src/shared/: PathResponse.ts
