[package]
name = "rexplorer"
version = "0.1.0"
description = "A File-Explorer written in Tauri"
authors = ["Christopher Quadflieg"]
license = "MIT"
repository = "https://github.com/Shinigami92/rexplorer"
default-run = "rexplorer"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0.87"
serde = { version = "1.0.147", features = ["derive"] }
tauri = { version = "1.1.1", features = ["api-all"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
